[package]
name = "dowser"
version = "0.6.2"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.63"
description = "A recursive, canonicalizing file finding library for Unix."
license = "WTFPL"
repository = "https://github.com/Blobfolio/dowser"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"examples",
	"justfile",
	"release",
	"tests",
]

[package.metadata.docs.rs]
features = [ "docsrs" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [ "x86_64-unknown-linux-gnu", "x86_64-apple-darwin" ]

[package.metadata.bashman]
name = "Dowser"
bash-dir = "./"
man-dir = "./"
credits-dir = "./"

[dependencies]
dactyl = "0.4.*"

[dependencies.ahash]
version = "=0.8.0"
default-features = false

[dev-dependencies]
brunch = "0.3.*"

[features]
default = []

# This is just a workaround for Docs.rs; don't enable this if you're a human!
docsrs = []

[[bench]]
name = "dowser"
harness = false

[[bench]]
name = "extension"
harness = false
