[package]
name = "dowser"
version = "0.9.1"
authors = ["Blobfolio, LLC. <hello@blobfolio.com>"]
edition = "2021"
rust-version = "1.72"
description = "A recursive, canonicalizing file finding library for Unix."
license = "WTFPL"
repository = "https://github.com/Blobfolio/dowser"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"examples",
	"justfile",
	"release",
	"tests",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Dowser"
bash-dir = "./"
man-dir = "./"
credits-dir = "./"

[dependencies]
dactyl = "0.7.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[dev-dependencies]
brunch = "0.5.*"

[[bench]]
name = "dowser"
harness = false

[[bench]]
name = "extension"
harness = false
