[package]
name = "dowser"
version = "0.14.1"
authors = ["Josh Stoik <josh@blobfolio.com>"]
edition = "2024"
rust-version = "1.88"
description = "A recursive, canonicalizing file finding library for Unix."
license = "WTFPL"
repository = "https://github.com/Blobfolio/dowser"
readme = "README.md"
exclude = [
	".github",
	".gitignore",
	".righteous-sandbox.json",
	"doc",
	"examples",
	"justfile",
	"release",
	"tests",
]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[package.metadata.bashman]
name = "Dowser"

[dependencies]
dactyl = "0.12.*"

[dependencies.ahash]
version = "0.8.*"
default-features = false

[dev-dependencies]
brunch = "0.11.*"

[[bench]]
name = "dowser"
harness = false

[[bench]]
name = "extension"
harness = false
